--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lds-blockchain2021",
+  "name": "@or13/lds-blockchain2021",
   "author": "Orie Steele",
   "module": "dist/lds-blockchain2021.esm.js",
   "version": "0.1.0",
@@ -10,6 +10,9 @@
     "dist",
     "src"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">=10"
   },
