--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
   },
   "dependencies": {
     "@transmute/did-key-secp256k1": "^0.2.1-unstable.30",
+    "@types/bs58": "^4.0.1",
     "bech32": "^2.0.0",
+    "bs58": "^4.0.1",
     "crypto-js": "^4.1.1",
     "ethereum-public-key-to-address": "0.0.5",
     "jsonld": "^3.2.0",
